fix s3 func import mutations, add flexwrap width to posttags

--- a/client/src/stylesheets/dashboard_feed.scss
+++ b/client/src/stylesheets/dashboard_feed.scss
@@ -121,6 +121,8 @@
     .postTags {
       position: relative;
       display: flex;
+      flex-wrap: wrap;
+      width: 100%;
 
       .tag {
         margin-left: 15px;
